--- a/BlazorServerUniversity/Pages/StudentForm.razor
+++ b/BlazorServerUniversity/Pages/StudentForm.razor
@@ -15,34 +15,34 @@
     <EditForm Model="@model" OnValidSubmit="@HandleValidSubmit" OnInvalidSubmit="HandleInvalidSubmit">
         <DataAnnotationsValidator/>
             <div class="form-group">
-                <label for="FirstName" class="font-weight-bold">First Name</label>
+                <label for="FirstName" class="font-weight-bold">Имя</label>
                 <InputText style="width: 30%" Id="FirstName" placeholder="First Name" @bind-Value="@model.FirstName" class="form-control col-3"></InputText>
                 <ValidationMessage For="@(() => model.FirstName)"/>
             </div>
             <div class="form-group">
-                <label for="LastName" class="font-weight-bold">Last Name</label>
+                <label for="LastName" class="font-weight-bold">Фамилия</label>
                 <InputText Id="LastName" style="width: 30%"placeholder="Last Name" @bind-Value="@model.LastName" class="form-control  col-3"></InputText>
                 <ValidationMessage For="@(() => model.LastName)"/>
             </div>
 
         <div class="form-group">
-            <label for="Age" class="font-weight-bold">Age</label>
+            <label for="Age" class="font-weight-bold">Возраст</label>
             <InputNumber Id="Age" style="width: 30%" placeholder="Age" @bind-Value="@model.Age" class="form-control col-3"></InputNumber>
             <ValidationMessage For="@(() => model.Age)"/>
         </div>
 
         <div class="form-group">
-            <label for="Course" class="font-weight-bold">Course</label>
+            <label for="Course" class="font-weight-bold">Курс</label>
             <InputNumber Id="Course" style="width: 30%" placeholder="Course" @bind-Value="@model.Course" class="form-control col-3"></InputNumber>
             <ValidationMessage For="@(() => model.Course)"/>
         </div>
         <div class="form-group">
-            <label for="Address" class="font-weight-bold">Address</label>
+            <label for="Address" class="font-weight-bold">Адрес</label>
             <InputText Id="Address" style="width: 30%" placeholder="Address" @bind-Value="@model.Address" class="form-control col-3"></InputText>
             <ValidationMessage For="@(() => model.Address)"/>
         </div>
         <div class="form-group">
-            <label for="Group" class="font-weight-bold">Group</label>
+            <label for="Group" class="font-weight-bold">Группа</label>
             <InputSelect Id="Group" style="width: 30%" @bind-Value="@model.Group" class="form-control col-3">
                 <option selected>-- Select --</option>
                 @foreach (var group in Context.Groups)
@@ -77,7 +77,12 @@
         [Range(17, 60, ErrorMessage = "Возраст должен быть между 17 и 60")]
         public int Age { get; set; }
 
+        
+        [System.ComponentModel.DataAnnotations.Required(ErrorMessage = "Выберите группу")]
         public string Group { get; set; }
+        
+        [System.ComponentModel.DataAnnotations.Required]
+        [Range(1, 4, ErrorMessage = "Курс должен быть между 1 и 4")]
         public int Course { get; set; }
     }
 
