--- a/BlazorServerUniversity/Components/ModalDialog.razor
+++ b/BlazorServerUniversity/Components/ModalDialog.razor
@@ -19,8 +19,8 @@
                         <button type="button" class="btn btn-primary" @onclick=@ModalOk>OK</button>
                         break;
                     case ModalDialogType.DeleteCancel:
-                        <button type="button" class="btn" @onclick="@ModalCancel">Cancel</button>
-                        <button type="button" class="btn btn-danger" @onclick=@ModalOk>Delete</button>
+                        <button type="button" class="btn" @onclick="@ModalCancel">Отмена</button>
+                        <button type="button" class="btn btn-danger" @onclick=@ModalOk>Удалить</button>
                         break;
                 }
             </div>
