--- a/BlazorServerUniversity/Pages/StudentPage.razor
+++ b/BlazorServerUniversity/Pages/StudentPage.razor
@@ -24,7 +24,7 @@
                                 <a >@_student.FirstName @_student.LastName</a>
                             </NavLink>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Student Profile</li>
+                        <li class="breadcrumb-item active" aria-current="page">Профиль студента</li>
                     </ol>
                 </nav>
                 <!-- /Breadcrumb -->
