--- a/BlazorServerUniversity/Shared/NavMenu.razor
+++ b/BlazorServerUniversity/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
     <nav class="flex-column">
         <AuthorizeView Roles="Admin">
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="" @onclick="ShitHappens">
+                <NavLink class="nav-link" href="students" >
                     <span class="oi oi-person" aria-hidden="true"></span> Студенты
                 </NavLink>
             </div>
@@ -25,7 +25,7 @@
 
         <AuthorizeView Roles="Student">
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="" @onclick="ShitHappens">
+                <NavLink class="nav-link" href="students" >
                     <span class="oi oi-person" aria-hidden="true"></span> Студенты
                 </NavLink>
             </div>
